--- a/files/sass/paxaslider.sass
+++ b/files/sass/paxaslider.sass
@@ -16,7 +16,7 @@
   padding: auto
   width: 100%
   z-index: 15
-  top: 270px
+  top: 400px
 
 .bullet_slider_px
   display: inline-block
@@ -27,3 +27,21 @@
   margin: 0 3px
   &.active_bullet
     background-position: left top
+
+
+.container_labels_px
+  position: relative
+  top: 100%
+  z-index: 15
+
+.labels_bullet_slider_px
+  background-color: #cecece
+  height: 15px
+  font-size: 15px
+  padding: 5px 0
+  float: left
+  text-align: center
+  width: 25% 
+  cursor: pointer
+  &.active_bullet
+    background-color: #2fcecc
