Stylesheet minified and normal

--- a/files/sass/paxaslider.sass
+++ b/files/sass/paxaslider.sass
@@ -1,3 +1,4 @@
+/* Comentario */
 .son_slider_px
   position: absolute
   display: block
@@ -44,4 +45,4 @@
   width: 25% 
   cursor: pointer
   &.active_bullet
-    background-color: #2fcecc
+    background-color: #93a9b1
